<resources>
    <string name="app_name">SpicagenMod settings</string>
    <string name="application_settings_title_head">Application</string>
    <string name="application_settings_title_subhead">Application settings</string>
    <string name="application_settings_summary_head">Application moving, install location</string>
    <string name="display_settings_title_head">Display</string>
    <string name="display_settings_title_subhead">Display settings</string>
    <string name="display_settings_summary_head">Display animations, rotation, timeouts</string>
    <string name="input_settings_title_head">Input</string>
    <string name="input_settings_title_subhead">Input settings</string>
    <string name="input_settings_summary_head">Input behavior, buttons, haptic feedback</string>
    <string name="interface_settings_title_head">Interface</string>
    <string name="interface_settings_title_subhead">Interface settings</string>
    <string name="interface_settings_summary_head">Interface tweaks, overscrolling, render effect</string>
    <string name="lockscreen_settings_title_head">Lockscreen</string>
    <string name="lockscreen_settings_title_subhead">Lockscreen settings</string>
    <string name="lockscreen_settings_summary_head">Lockscreen gestures, style, unlock options</string>
    <string name="performance_settings_title_head">Performance</string>
    <string name="performance_settings_title_subhead">Performance settings</string>
    <string name="performance_settings_summary_head">Performance tweaks, JIT, VM heap size</string>
    <string name="sound_settings_title_head">Sound</string>
    <string name="sound_settings_title_subhead">Sound settings</string>
    <string name="sound_settings_summary_head">Sound volumes, audio focus, quiet hours</string>
    <string name="system_settings_title_head">System</string>
    <string name="system_settings_title_subhead">System settings</string>
    <string name="system_settings_summary_head">System changelog, stats, update notifications</string>
    <string name="updatenotify_title">Update notifications</string>
    <string name="updatenotify_summary">Get push notifications of updates.</string>
    <string name="ui_title">User interface</string>
    <string name="ui_summary">User interface settings &amp; tweaks</string>
    <string name="ui_status_bar">Status Bar Customization</string>
    <string name="pref_electron_beam_animation_on">Screen-on animation</string>
    <string name="pref_electron_beam_animation_off">Screen-off animation</string>
	<string name="title_animations">Animations</string>
	<string name="title_window_animations">Window animations</string>
	<string name="summary_window_animations">Speed of animations in individual windows</string>
	<string name="dialog_title_window_animations">Select window speed</string>
	<string name="title_transition_animations">Transition animations</string>
	<string name="summary_transition_animations">Speed of animations moving between screens</string>
	<string name="dialog_title_transition_animations">Select transition speed</string>
	<string name="title_fancy_ime_animations">Fancy input animations</string>
	<string name="summary_on_fancy_ime_animations">Use fancier animations for input method windows</string>
	<string name="summary_off_fancy_ime_animations">Use normal animations for input method windows</string>
    <string name="ui_rotation_title">Rotation</string>
    <string name="pref_rotation_90_title">Rotate 90 degrees</string>
    <string name="pref_rotation_180_title">Rotate 180 degrees</string>
    <string name="pref_rotation_270_title">Rotate 270 degrees</string>
    <string name="trackball_title">LED notifications</string>
    <string name="trackball_summary">Control trackball/LED notification colors and pulse</string>
    <string name="ui_webview_title">WebView</string>
    <string name="pref_pinch_reflow_title">Reflow after pinch in</string>
    <string name="pref_pinch_reflow_summary">Reflow content immediately after pinch to zoom in</string>
    <string name="ui_overscroll_title">Overscrolling</string>
    <string name="pref_overscroll_title">Overscroll effect</string>
    <string name="pref_overscroll_summary">Choose how scrollable objects look when they overshoot</string>
    <string name="pref_overscroll_weight_title">Overscrolling weight</string>
    <string name="pref_overscroll_weight_summary">Select the weight of the scrollable objects</string>
    <string name="ui_lockscreen_title">Screen lock settings</string>
    <string name="pref_lockscreen_delay_title">Delay</string>
    <string name="pref_lockscreen_timeout_lock_delay">Screen timeout delay</string>
    <string name="pref_lockscreen_screenoff_lock_delay">Screen turned off delay</string>
    <string name="pref_lockscreen_timeout_lock_delay_summary">How long to delay before enabling screen lock when screen times out</string>
    <string name="pref_lockscreen_screenoff_lock_delay_summary">How long to delay before enabling screen lock when screen is turned off</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="msg_color_picker">Tap on center color to confirm.\nPress back to cancel</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_summary">Status bar tweaks</string>
    <string name="battery_title">Battery</string>
    <string name="pref_battery_percentage_title">Battery percentage</string>
    <string name="pref_battery_percentage_summary">Battery percentage displayed in the status bar</string>
    <string name="battery_status_color_title">Battery percentage color</string>
    <string name="clock_title">Clock</string>
    <string name="title_show_clock">Show clock</string>
    <string name="title_clock_color">Clock color</string>
    <string name="clock_show_am_pm">Show AM/PM for 12-hour clock</string>
    <string name="dbm_title">dBm signal strength</string>
    <string name="title_show_dbm">Show dBm</string>
    <string name="summary_on_show_dbm">Signal strength in dBm is displayed in the status bar</string>
    <string name="dp_title">Date and provider</string>
    <string name="dp_summary">Date and provider tweaks</string>
    <string name="title_notifications_color_tweaks">Notifications colors</string>
    <string name="summary_notifications_color_tweaks">Notifications ticker, ongoing notifications, latest notifications, clear notifications, etc</string>
    <string name="te_title">Tweaks extras</string>
    <string name="te_title_summary">Extra tools for interface tweaks</string>
    <string name="long_press_home_title">Long-press home settings</string>
    <string name="long_press_home_summary">Number of recent applications, etc</string>
    <string name="recent_apps_num_title">Number of recent apps</string>
    <string name="recent_apps_num_summary">Number of recent apps to display on long press home</string>
    <string name="dialog_recent_apps_num_title">Specify number of recent apps</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="haptic_title">Haptic feedback tweaks</string>
    <string name="haptic_summary">Adjust when and how strong haptic feedback occurs</string>
    <string name="general_title">General</string>
    <string name="buttons_title">Buttons</string>
    <string name="pref_power_prompt_title">Power prompt</string>
    <string name="pref_power_prompt_summary">Change whether there is a prompt after choosing shutdown or reboot</string>
    <string name="pref_render_effect_title">Render effect</string>
    <string name="pref_render_effect_summary">Change what colors are used to draw the screen (potential battery savings)</string>
    <string name="title_expanded_widget">Notification power widget</string>
    <string name="summary_expanded_widget">Use the expanded views power widget</string>
    <string name="title_expanded_hide_onchange">Hide on change</string>
    <string name="summary_expanded_hide_onchange">Hide the notification pulldown after toggling a widget button</string>
    <string name="expanded_color_mask">Indicator color</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">Pick your widget buttons</string>
    <string name="sound_notifications_focus_title">Notification focus</string>
    <string name="sound_notifications_focus_summary">Audio focus requests causes compatible apps to lower the volume while notifications play.</string>
    <string name="sound_to_speaker_title">Always play on speaker</string>
    <string name="sound_notifications_title">Notifications</string>
    <string name="sound_rings_title">Ring tones</string>
    <string name="sound_alarms_title">Alarms</string>
    <string name="sound_note_title">Note</string>
    <string name="sound_note_summary">The settings below apply only when headphones are used.</string>
    <string name="sound_attenuation_title">Attenuation of set volume</string>
    <string name="sound_limitvol_title">Volume if music playing</string>
    <string name="sound_notifications_attenuation_dialog">Notification attenuation</string>
    <string name="sound_rings_attenuation_dialog">Ring tone attenuation</string>
    <string name="sound_alarms_attenuation_dialog">Alarm attenuation</string>
    <string name="sound_notifications_limitvol_dialog">Notification volume</string>
    <string name="sound_rings_limitvol_dialog">Ring tone volume</string>
    <string name="sound_alarms_limitvol_dialog">Alarm volume</string>
    <string name="cmstats_title">Anonymous statistics</string>
    <string name="cmstats_summary">Help make CM better by opting-in to anonymous statistics reporting</string>
    <string name="changelog_title">View changelog</string>
    <string name="ext_ls_background_title">Lockscreen background</string>
    <string name="ext_ls_background_summaryon">Will use /sdcard/lockscreen_wallpaper.png</string>
    <string name="ext_ls_background_summaryoff">Will use system wallpaper</string>
    <string name="ext_ls_visibility_title">Elements visibility</string>
    <string name="ext_ls_counterbar_visibility_title">Counter bar</string>
    <string name="ext_ls_counterbar_visibility_summary">Show unread/missed counter</string>
    <string name="ext_ls_connectivitybar_visibility_title">Connectivity bar</string>
    <string name="ext_ls_connectivitybar_visibility_summary">Show connectivity information bar</string>
    <string name="ext_ls_genie_visibility_title">GenieWidget</string>
    <string name="ext_ls_genie_visibility_summary">Show weather forecast</string>
    <string name="ext_ls_nowplaying_visibility_title">Now playing</string>
    <string name="ext_ls_nowplaying_visibility_summary">Show marquee with now playing</string>
    <string name="ext_ls_notofications_title">Notifications</string>
    <string name="ext_ls_smsmms_notification_title">New SMS/MMS message</string>
    <string name="ext_ls_call_notification_title">Missed call</string>
    <string name="ext_ls_gmail_notification_title">New Gmail message</string>
    <string name="ext_ls_alarm_notification_title">Clock alarms</string>
    <string name="ext_ls_state_notification_title">Phone state</string>
    <string name="ext_ls_state_notification_summary">Sounds, vibration...</string>
    <string name="title_statusbar_music_control">Statusbar music</string>
    <string name="pref_statusbar_music_controls_title">Statusbar music controls</string>
    <string name="pref_statusbar_music_controls_summary">Displays music controls on the statusbar</string>
    <string name="pref_statusbar_always_music_controls_title">Always display music controls</string>
    <string name="pref_statusbar_always_music_controls_summary">Display music controls regardless of whether or not music is playing</string>
</resources>