<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Notifications -->
    <CheckBoxPreference android:key="notif-focus"
        android:title="@string/sound_notifications_focus_title"
        android:summary="@string/sound_notifications_focus_summary"
        android:persistent="false" />

    <!-- Some spacing -->
    <PreferenceCategory />

    <!-- Note -->
    <Preference android:title="@string/sound_note_title"
        android:summary="@string/sound_note_summary"
        android:selectable="false" />

    <!-- Sound to speaker -->
    <PreferenceCategory android:title="@string/sound_to_speaker_title">

        <!-- Notifications -->
        <CheckBoxPreference android:key="notif-speaker"
            android:title="@string/sound_notifications_title"
            android:persistent="false" />

        <!-- Ring tones -->
        <CheckBoxPreference android:key="ring-speaker"
            android:title="@string/sound_rings_title"
            android:persistent="false" />

        <!-- Alarms -->
        <CheckBoxPreference android:key="alarm-speaker"
            android:title="@string/sound_alarms_title"
            android:persistent="false" />
    </PreferenceCategory>

    <!-- Attenuation -->
    <PreferenceCategory android:title="@string/sound_attenuation_title">

        <!-- Notifications -->
        <ListPreference android:key="notif-attn"
            android:title="@string/sound_notifications_title"
            android:dialogTitle="@string/sound_notifications_attenuation_dialog"
            android:entries="@array/entries_sound_attenuation"
            android:entryValues="@array/values_sound_attenuation"
            android:persistent="false" />

        <!-- Ring tones -->
        <ListPreference android:key="ring-attn"
            android:title="@string/sound_rings_title"
            android:dialogTitle="@string/sound_rings_attenuation_dialog"
            android:entries="@array/entries_sound_attenuation"
            android:entryValues="@array/values_sound_attenuation"
            android:persistent="false" />

        <!-- Alarms -->
        <ListPreference android:key="alarm-attn"
            android:title="@string/sound_alarms_title"
            android:dialogTitle="@string/sound_alarms_attenuation_dialog"
            android:entries="@array/entries_sound_attenuation"
            android:entryValues="@array/values_sound_attenuation"
            android:persistent="false" />

    </PreferenceCategory>

    <!-- Volume limit -->
    <PreferenceCategory android:title="@string/sound_limitvol_title">

        <!-- Notifications -->
        <ListPreference android:key="notif-limitvol"
            android:title="@string/sound_notifications_title"
            android:dialogTitle="@string/sound_notifications_limitvol_dialog"
            android:entries="@array/entries_sound_limitvol"
            android:entryValues="@array/values_sound_limitvol"
            android:persistent="false" />

        <!-- Ring tones -->
        <ListPreference android:key="ring-limitvol"
            android:title="@string/sound_rings_title"
            android:dialogTitle="@string/sound_rings_limitvol_dialog"
            android:entries="@array/entries_sound_limitvol"
            android:entryValues="@array/values_sound_limitvol"
            android:persistent="false" />

        <!-- Alarms -->
        <ListPreference android:key="alarm-limitvol"
            android:title="@string/sound_alarms_title"
            android:dialogTitle="@string/sound_alarms_limitvol_dialog"
            android:entries="@array/entries_sound_limitvol"
            android:entryValues="@array/values_sound_limitvol"
            android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>
